// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiline.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '

=====================================output=====================================
a: "
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "
b: "
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "

================================================================================
`;

exports[`multiline.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '

=====================================output=====================================
a: '
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  '
b: '
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  '

================================================================================
`;

exports[`multiline.yml 3`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '

=====================================output=====================================
a: "
  123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "
b: "
  123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123 123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "

================================================================================
`;

exports[`multiline.yml 4`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
a: "   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    "
b: '   
  123123123123123123123123123   
       123123123123123123123123123   
         123123123123123123123123123				
    123123123123123123123123123   
      123123123123123123123123123   
  123123123123123123123123123   
            123123123123123123123123123				
         
         123123123123123123123123123   
         
         
         123123123123123123123123123      
         
         
         
         
         123123123123123123123123123  
    '

=====================================output=====================================
a: "
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "
b: "
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123 123123123123123123123123123
  123123123123123123123123123

  123123123123123123123123123


  123123123123123123123123123




  123123123123123123123123123
  "

================================================================================
`;

exports[`quote.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
- "'a\\"b"

=====================================output=====================================
- "123"
- "123"
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"
- '''a"b'

================================================================================
`;

exports[`quote.yml 2`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
singleQuote: true
                                                                                | printWidth
=====================================input======================================
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
- "'a\\"b"

=====================================output=====================================
- '123'
- '123'
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"
- '''a"b'

================================================================================
`;

exports[`quote.yml 3`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "never"
                                                                                | printWidth
=====================================input======================================
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
- "'a\\"b"

=====================================output=====================================
- "123"
- "123"
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"
- '''a"b'

================================================================================
`;

exports[`quote.yml 4`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- "123"
- '123'
- "''"
- '""'
- ''''
- "\\"\\""
- '\\n123'
- "\\n123"
- "'a\\"b"

=====================================output=====================================
- "123"
- "123"
- "''"
- '""'
- "'"
- '""'
- '\\n123'
- "\\n123"
- '''a"b'

================================================================================
`;
